--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 .vscode
-website/__pycache__
+website/backend/__pycache__
 website/backend/db.sqlite
