--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,9 @@ $RECYCLE.BIN/
 .vscode
 website/backend/db.sqlite
 website/backend/config.py
-website/backend/__pycache__
-website/backend/static
-website/backend/templates
+website/backend/__pycache__/
+website/backend/static/
+website/backend/templates/
 
 # =========================
 # Operating System Files
