--- a/website/client/package.json
+++ b/website/client/package.json
@@ -13,6 +13,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
