--- a/website/client/package.json
+++ b/website/client/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.0.0"
