--- a/website/client/package.json
+++ b/website/client/package.json
@@ -15,7 +15,8 @@
     "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.3",
     "vuelidate": "^0.7.4",
-    "vuetify": "^2.0.0"
+    "vuetify": "^2.0.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
